# lc-vocabularies-mcp

./: .gitignore  INSTRUCTIONS.md  README.md  SKILL.md  pyproject.toml
src/lc_vocabularies_mcp/: __init__.py  cli.py  server.py
