[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lc-vocabularies-mcp"
version = "1.0.0"
description = "MCP server for searching and retrieving Library of Congress vocabulary data"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
lc-vocabularies-mcp = "lc_vocabularies_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
